--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/java"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="E:/projects/tiny-codec/tools/ID3V2/bin/id3v2.jar"/>
+	<classpathentry kind="lib" path="lib/ID3V2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
